Removed Boiler plate code and added test cases